--- a/django_typer/locale/et/LC_MESSAGES/django.po
+++ b/django_typer/locale/et/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-04 03:08-0600\n"
+"POT-Creation-Date: 2025-02-04 03:42-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,9 +44,8 @@ msgid ""
 "The name of the django manage script to install autocompletion for if "
 "different than the script used to invoke this command."
 msgstr ""
-"Django haldamise skripti nimi, mille jaoks automaatse lõpetamise "
-"installimiseks kasutatakse, kui see erineb selle käsu käivitamiseks "
-"kasutatud skriptist."
+"django haldamise skripti nimi, mille puhul installitakse automaatne "
+"lõpetamine, kui see erineb selle käsu käivitamiseks kasutatud skriptist."
 
 #: management/commands/shellcompletion.py:286
 msgid ""
@@ -72,15 +71,15 @@ msgstr ""
 "Django haldusskripti nimi, mis eemaldab kesta lõpetamise, kui see erineb "
 "selle käsu käivitamiseks kasutatud skriptist."
 
-#: management/commands/shellcompletion.py:392
+#: management/commands/shellcompletion.py:390
 msgid "Generate autocompletion for command string."
 msgstr "Loo käsustringi automaatne lõpetamine."
 
-#: management/commands/shellcompletion.py:400
+#: management/commands/shellcompletion.py:398
 msgid "The command string to generate completion suggestions for."
 msgstr "Käsu jada, mille jaoks lõpetamissoovitusi luua."
 
-#: management/commands/shellcompletion.py:410
+#: management/commands/shellcompletion.py:408
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand. By default, the builtin django "
@@ -108,7 +107,7 @@ msgid ""
 "this isn't provided, the DJANGO_SETTINGS_MODULE environment variable will be"
 " used."
 msgstr ""
-"Pythoni tee seadete moodulisse, nt &quot;myproject.settings.main&quot;. Kui "
+"Pythoni tee seadete moodulisse, nt \"myproject.settings.main\". Kui "
 "seda ei pakuta, kasutatakse keskkonnamuutujat DJANGO_SETTINGS_MODULE."
 
 #: types.py:128
@@ -117,7 +116,7 @@ msgid ""
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
 "Kataloog, mis lisatakse Pythoni teele, nt "
-"&quot;/home/djangoprojects/myproject&quot;."
+"\"/home/djangoprojects/myproject\"."
 
 #: types.py:149
 msgid "Raise on CommandError exceptions"
@@ -134,47 +133,3 @@ msgstr "Käsu väljundi värvimine."
 #: types.py:204
 msgid "Skip system checks."
 msgstr "Jäta süsteemikontrollid vahele."
-
-#, python-brace-format
-#~ msgid "Unable to import fallback completion function: {err}"
-#~ msgstr "Varu lõpetamise funktsiooni ei saa importida: {err}"
-
-#~ msgid ""
-#~ "Please specify the shell to install or remove autocompletion for. Unable to "
-#~ "detect shell."
-#~ msgstr ""
-#~ "Määrake kest, mille puhul automaatse lõpetamise installida või eemaldada. "
-#~ "Kesta ei õnnestu tuvastada."
-
-#, python-brace-format
-#~ msgid "Unsupported shell: {shell}"
-#~ msgstr "Toetamata kest: {shell}"
-
-#, python-brace-format
-#~ msgid ""
-#~ "Shell {shell} does not support autocompletion for scripts that are not "
-#~ "installed on the path. You must create an entry point for {script_name}. See"
-#~ " {link}."
-#~ msgstr ""
-#~ "Shell {shell} ei toeta skriptide automaatset lõpetamist, mida pole teele "
-#~ "installitud. Peate looma {script_name} jaoks sisestuspunkti. Vaadake {link}."
-
-#, python-brace-format
-#~ msgid ""
-#~ "It is not recommended to install tab completion for a script not on the path"
-#~ " because completions will likely only work if the script is invoked from the"
-#~ " same location and using the same relative path. You may wish to create an "
-#~ "entry point for {script_name}. See {link}."
-#~ msgstr ""
-#~ "Ei ole soovitatav installida vahekaardi lõpetamist skripti jaoks, mis ei ole"
-#~ " teel, sest lõpud toimivad tõenäoliselt ainult siis, kui skript kutsutakse "
-#~ "välja samast asukohast ja kasutades sama suhtelist teed. Võimalik, et "
-#~ "soovite luua {script_name} jaoks sisestuspunkti. Vaadake {link}."
-
-#, python-brace-format
-#~ msgid "Installed autocompletion for {shell} @ {install_path}"
-#~ msgstr "Installitud automaatne lõpetamine {shell} jaoks @ {install_path}"
-
-#, python-brace-format
-#~ msgid "Uninstalled autocompletion for {shell}."
-#~ msgstr "Desinstallitud automaatne lõpetamine {shell} jaoks."
