--- a/django_typer/locale/sr_Latn/LC_MESSAGES/django.po
+++ b/django_typer/locale/sr_Latn/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-04 03:08-0600\n"
+"POT-Creation-Date: 2025-02-04 03:42-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,23 +72,23 @@ msgstr ""
 "Име скрипте за управљање дјанго за уклањање завршетка љуске за ако је "
 "другачије од скрипте која се користи за позивање ове команде."
 
-#: management/commands/shellcompletion.py:392
+#: management/commands/shellcompletion.py:390
 msgid "Generate autocompletion for command string."
 msgstr "Генериши аутоматско довршавање за командни низ."
 
-#: management/commands/shellcompletion.py:400
+#: management/commands/shellcompletion.py:398
 msgid "The command string to generate completion suggestions for."
 msgstr "Командни низ за генерисање предлога за завршетак."
 
-#: management/commands/shellcompletion.py:410
+#: management/commands/shellcompletion.py:408
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand. By default, the builtin django "
 "autocomplete function is used."
 msgstr ""
-"Путања за увоз питхон-а до резервне комплетне функције која се користи када "
+"Путања за увоз питхон-а до резервне довршене функције која се користи када "
 "команда довршавања није ТиперЦомманд. Подразумевано се користи уграђена "
-"функција аутодовршавања дјанго-а."
+"дјанго функција аутодовршавања."
 
 #: types.py:54
 msgid "Show program's version number and exit."
@@ -109,7 +109,7 @@ msgid ""
 " used."
 msgstr ""
 "Питхон путања до модула подешавања, нпр. "
-"&quot;мипројецт.сеттингс.маин&quot;. Ако ово није обезбеђено, користиће се "
+"\"мипројецт.сеттингс.маин\". Ако ово није обезбеђено, користиће се "
 "променљива окружења ДЈАНГО_СЕТТИНГС_МОДУЛЕ."
 
 #: types.py:128
@@ -118,7 +118,7 @@ msgid ""
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
 "Директоријум који треба додати путањи Питхон-а, нпр. "
-"&quot;/хоме/дјангопројецтс/мипројецт&quot;."
+"\"/хоме/дјангопројецтс/мипројецт\"."
 
 #: types.py:149
 msgid "Raise on CommandError exceptions"
@@ -135,48 +135,3 @@ msgstr "Присилно колоризацију излаза команде."
 #: types.py:204
 msgid "Skip system checks."
 msgstr "Прескочите системске провере."
-
-#, python-brace-format
-#~ msgid "Unable to import fallback completion function: {err}"
-#~ msgstr "Није могуће увести резервну функцију довршавања: {ерр}"
-
-#~ msgid ""
-#~ "Please specify the shell to install or remove autocompletion for. Unable to "
-#~ "detect shell."
-#~ msgstr ""
-#~ "Наведите љуску за коју желите да инсталирате или уклоните аутоматско "
-#~ "довршавање. Није могуће открити шкољку."
-
-#, python-brace-format
-#~ msgid "Unsupported shell: {shell}"
-#~ msgstr "Неподржана шкољка: {схелл}"
-
-#, python-brace-format
-#~ msgid ""
-#~ "Shell {shell} does not support autocompletion for scripts that are not "
-#~ "installed on the path. You must create an entry point for {script_name}. See"
-#~ " {link}."
-#~ msgstr ""
-#~ "Схелл {схелл} не подржава аутоматско довршавање за скрипте које нису "
-#~ "инсталиране на путањи. Морате да направите улазну тачку за {сцрипт_наме}. "
-#~ "Погледајте {линк}."
-
-#, python-brace-format
-#~ msgid ""
-#~ "It is not recommended to install tab completion for a script not on the path"
-#~ " because completions will likely only work if the script is invoked from the"
-#~ " same location and using the same relative path. You may wish to create an "
-#~ "entry point for {script_name}. See {link}."
-#~ msgstr ""
-#~ "Не препоручује се инсталирање довршавања картице за скрипту која није на "
-#~ "путањи јер ће довршавања вероватно функционисати само ако је скрипта позвана"
-#~ " са исте локације и користећи исту релативну путању. Можда ћете желети да "
-#~ "направите улазну тачку за {сцрипт_наме}. Погледајте {линк}."
-
-#, python-brace-format
-#~ msgid "Installed autocompletion for {shell} @ {install_path}"
-#~ msgstr "Инсталирано аутоматско довршавање за {схелл} @ {инсталл_патх}"
-
-#, python-brace-format
-#~ msgid "Uninstalled autocompletion for {shell}."
-#~ msgstr "Деинсталирано аутоматско довршавање за {схелл}."
