--- a/django_typer/locale/ca/LC_MESSAGES/django.po
+++ b/django_typer/locale/ca/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-04 03:08-0600\n"
+"POT-Creation-Date: 2025-02-04 03:42-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,16 +50,17 @@ msgid ""
 "The name of the django manage script to install autocompletion for if "
 "different than the script used to invoke this command."
 msgstr ""
-"El nom de l&#39;script django manage per instal·lar l&#39;autocompleció si "
-"és diferent de l&#39;script utilitzat per invocar aquesta ordre."
+"El nom de l&#39;script django manage per instal·lar l&#39;emplenament "
+"automàtic si és diferent de l&#39;script utilitzat per invocar aquesta "
+"ordre."
 
 #: management/commands/shellcompletion.py:286
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand."
 msgstr ""
-"La ruta d&#39;importació de Python a una funció completa alternativa per "
-"utilitzar-la quan l&#39;ordre de finalització no és un TyperCommand."
+"El camí d&#39;importació de Python a una funció completa alternativa per "
+"utilitzar-lo quan l&#39;ordre de finalització no és un TyperCommand."
 
 #: management/commands/shellcompletion.py:299
 msgid "The name of the template to use for the shell completion script."
@@ -82,22 +83,22 @@ msgstr ""
 "l&#39;intèrpret d&#39;ordres, si és diferent de l&#39;script utilitzat per "
 "invocar aquesta ordre."
 
-#: management/commands/shellcompletion.py:392
+#: management/commands/shellcompletion.py:390
 msgid "Generate autocompletion for command string."
 msgstr "Genereu l&#39;autocompleció per a la cadena d&#39;ordres."
 
-#: management/commands/shellcompletion.py:400
+#: management/commands/shellcompletion.py:398
 msgid "The command string to generate completion suggestions for."
 msgstr "La cadena d&#39;ordres per generar suggeriments de finalització."
 
-#: management/commands/shellcompletion.py:410
+#: management/commands/shellcompletion.py:408
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand. By default, the builtin django "
 "autocomplete function is used."
 msgstr ""
-"La ruta d&#39;importació de Python a una funció completa alternativa per "
-"utilitzar-la quan l&#39;ordre de finalització no és un TyperCommand. Per "
+"El camí d&#39;importació de Python a una funció completa alternativa per "
+"utilitzar-lo quan l&#39;ordre de finalització no és un TyperCommand. Per "
 "defecte, s&#39;utilitza la funció d&#39;autocompletar django integrada."
 
 #: types.py:54
@@ -109,7 +110,7 @@ msgid ""
 "Verbosity level; 0=minimal output, 1=normal output, 2=verbose output, 3=very"
 " verbose output"
 msgstr ""
-"Nivell de verbositat; 0 = sortida mínima, 1 = sortida normal, 2 = sortida "
+"nivell de verbositat; 0 = sortida mínima, 1 = sortida normal, 2 = sortida "
 "detallada, 3 = sortida molt detallada"
 
 #: types.py:104
@@ -119,7 +120,7 @@ msgid ""
 " used."
 msgstr ""
 "La ruta de Python a un mòdul de configuració, per exemple, "
-"&quot;myproject.settings.main&quot;. Si no es proporciona, s&#39;utilitzarà "
+"\"myproject.settings.main\". Si no es proporciona, s&#39;utilitzarà "
 "la variable d&#39;entorn DJANGO_SETTINGS_MODULE."
 
 #: types.py:128
@@ -128,7 +129,7 @@ msgid ""
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
 "Un directori per afegir a la ruta de Python, per exemple "
-"&quot;/home/djangoprojects/myproject&quot;."
+"\"/home/djangoprojects/myproject\"."
 
 #: types.py:149
 msgid "Raise on CommandError exceptions"
@@ -145,50 +146,3 @@ msgstr "Força la colorització de la sortida de l&#39;ordre."
 #: types.py:204
 msgid "Skip system checks."
 msgstr "Omet les comprovacions del sistema."
-
-#, python-brace-format
-#~ msgid "Unable to import fallback completion function: {err}"
-#~ msgstr "No es pot importar la funció de finalització alternativa: {err}"
-
-#~ msgid ""
-#~ "Please specify the shell to install or remove autocompletion for. Unable to "
-#~ "detect shell."
-#~ msgstr ""
-#~ "Si us plau, especifiqueu l&#39;intèrpret d&#39;ordres per instal·lar o "
-#~ "eliminar l&#39;emplenament automàtic. No es pot detectar shell."
-
-#, python-brace-format
-#~ msgid "Unsupported shell: {shell}"
-#~ msgstr "Shell no compatible: {shell}"
-
-#, python-brace-format
-#~ msgid ""
-#~ "Shell {shell} does not support autocompletion for scripts that are not "
-#~ "installed on the path. You must create an entry point for {script_name}. See"
-#~ " {link}."
-#~ msgstr ""
-#~ "Shell {shell} no admet la compleció automàtica per als scripts que no estan "
-#~ "instal·lats al camí. Heu de crear un punt d&#39;entrada per a {script_name}."
-#~ " Vegeu {link}."
-
-#, python-brace-format
-#~ msgid ""
-#~ "It is not recommended to install tab completion for a script not on the path"
-#~ " because completions will likely only work if the script is invoked from the"
-#~ " same location and using the same relative path. You may wish to create an "
-#~ "entry point for {script_name}. See {link}."
-#~ msgstr ""
-#~ "No es recomana instal·lar la finalització de la pestanya per a un script que"
-#~ " no es troba al camí perquè és probable que només funcionin si l&#39;script "
-#~ "s&#39;invoca des de la mateixa ubicació i utilitza el mateix camí relatiu. "
-#~ "És possible que vulgueu crear un punt d&#39;entrada per a {script_name}. "
-#~ "Vegeu {link}."
-
-#, python-brace-format
-#~ msgid "Installed autocompletion for {shell} @ {install_path}"
-#~ msgstr ""
-#~ "S&#39;ha instal·lat la compleció automàtica per a {shell} @ {install_path}"
-
-#, python-brace-format
-#~ msgid "Uninstalled autocompletion for {shell}."
-#~ msgstr "S&#39;ha desinstal·lat l&#39;autocompleció per a {shell}."
