--- a/django_typer/locale/da/LC_MESSAGES/django.po
+++ b/django_typer/locale/da/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-04 03:08-0600\n"
+"POT-Creation-Date: 2025-02-04 03:42-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,8 +54,8 @@ msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand."
 msgstr ""
-"Python-importstien til en fallback-fuldførelsesfunktion, der skal bruges, "
-"når fuldførelseskommandoen ikke er en TyperCommand."
+"Python-importstien til en komplet fallback-funktion, der skal bruges, når "
+"fuldførelseskommandoen ikke er en TyperCommand."
 
 #: management/commands/shellcompletion.py:299
 msgid "The name of the template to use for the shell completion script."
@@ -73,15 +73,15 @@ msgstr ""
 "Navnet på django-manage-scriptet for at fjerne shell-fuldførelse, hvis det "
 "er anderledes end det script, der blev brugt til at påkalde denne kommando."
 
-#: management/commands/shellcompletion.py:392
+#: management/commands/shellcompletion.py:390
 msgid "Generate autocompletion for command string."
 msgstr "Generer autofuldførelse for kommandostreng."
 
-#: management/commands/shellcompletion.py:400
+#: management/commands/shellcompletion.py:398
 msgid "The command string to generate completion suggestions for."
 msgstr "Kommandostrengen til at generere færdiggørelsesforslag til."
 
-#: management/commands/shellcompletion.py:410
+#: management/commands/shellcompletion.py:408
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand. By default, the builtin django "
@@ -110,7 +110,7 @@ msgid ""
 " used."
 msgstr ""
 "Python-stien til et indstillingsmodul, f.eks. "
-"&quot;myproject.settings.main&quot;. Hvis dette ikke er angivet, vil "
+"\"myproject.settings.main\". Hvis dette ikke er angivet, vil "
 "DJANGO_SETTINGS_MODULE miljøvariablen blive brugt."
 
 #: types.py:128
@@ -119,7 +119,7 @@ msgid ""
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
 "En mappe, der skal tilføjes til Python-stien, f.eks. "
-"&quot;/home/djangoprojects/mitprojekt&quot;."
+"\"/home/djangoprojects/mitprojekt\"."
 
 #: types.py:149
 msgid "Raise on CommandError exceptions"
@@ -136,48 +136,3 @@ msgstr "Tving farvelægning af kommandoudgangen."
 #: types.py:204
 msgid "Skip system checks."
 msgstr "Spring over systemtjek."
-
-#, python-brace-format
-#~ msgid "Unable to import fallback completion function: {err}"
-#~ msgstr "Kan ikke importere reservefuldførelsesfunktion: {err}"
-
-#~ msgid ""
-#~ "Please specify the shell to install or remove autocompletion for. Unable to "
-#~ "detect shell."
-#~ msgstr ""
-#~ "Angiv venligst den skal, der skal installeres eller fjernes autofuldførelse "
-#~ "for. Kan ikke registrere skal."
-
-#, python-brace-format
-#~ msgid "Unsupported shell: {shell}"
-#~ msgstr "Ikke-understøttet skal: {shell}"
-
-#, python-brace-format
-#~ msgid ""
-#~ "Shell {shell} does not support autocompletion for scripts that are not "
-#~ "installed on the path. You must create an entry point for {script_name}. See"
-#~ " {link}."
-#~ msgstr ""
-#~ "Shell {shell} understøtter ikke autofuldførelse for scripts, der ikke er "
-#~ "installeret på stien. Du skal oprette et indgangspunkt for {script_name}. Se"
-#~ " {link}."
-
-#, python-brace-format
-#~ msgid ""
-#~ "It is not recommended to install tab completion for a script not on the path"
-#~ " because completions will likely only work if the script is invoked from the"
-#~ " same location and using the same relative path. You may wish to create an "
-#~ "entry point for {script_name}. See {link}."
-#~ msgstr ""
-#~ "Det anbefales ikke at installere tabulatorfuldførelse for et script, der "
-#~ "ikke er på stien, fordi fuldførelser sandsynligvis kun vil fungere, hvis "
-#~ "scriptet startes fra den samme placering og bruger den samme relative sti. "
-#~ "Du ønsker måske at oprette et indgangspunkt for {script_name}. Se {link}."
-
-#, python-brace-format
-#~ msgid "Installed autocompletion for {shell} @ {install_path}"
-#~ msgstr "Installeret autofuldførelse for {shell} @ {install_path}"
-
-#, python-brace-format
-#~ msgid "Uninstalled autocompletion for {shell}."
-#~ msgstr "Afinstalleret autofuldførelse for {shell}."
