--- a/django_typer/locale/ga/LC_MESSAGES/django.po
+++ b/django_typer/locale/ga/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-04 03:08-0600\n"
+"POT-Creation-Date: 2025-02-04 03:42-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -69,19 +69,19 @@ msgid ""
 "The name of the django manage script to remove shell completion for if "
 "different than the script used to invoke this command."
 msgstr ""
-"Ainm an script bainistithe django chun críochnú sliogán a bhaint le haghaidh"
-" más difriúil é an script a úsáidtear chun an t-ordú seo a agairt."
+"Ainm an script bainistithe django chun comhlánú na blaosc a bhaint le "
+"haghaidh más difriúil é an script a úsáidtear chun an t-ordú seo a agairt."
 
-#: management/commands/shellcompletion.py:392
+#: management/commands/shellcompletion.py:390
 msgid "Generate autocompletion for command string."
 msgstr "Gin uathchríochnú don teaghrán ordaithe."
 
-#: management/commands/shellcompletion.py:400
+#: management/commands/shellcompletion.py:398
 msgid "The command string to generate completion suggestions for."
 msgstr ""
 "An teaghrán ordaithe chun moltaí críochnaithe a ghiniúint le haghaidh."
 
-#: management/commands/shellcompletion.py:410
+#: management/commands/shellcompletion.py:408
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand. By default, the builtin django "
@@ -110,7 +110,7 @@ msgid ""
 " used."
 msgstr ""
 "An cosán Python chuig modúl socruithe, m.sh. "
-"&quot;myproject.settings.main&quot;. Mura gcuirtear é seo ar fáil, úsáidfear"
+"\"myproject.settings.main\". Mura gcuirtear é seo ar fáil, úsáidfear"
 " an athróg timpeallachta DJANGO_SETTINGS_MODULE."
 
 #: types.py:128
@@ -119,7 +119,7 @@ msgid ""
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
 "Eolaire le cur le cosán Python, m.sh. "
-"&quot;/home/djangoprojects/myproject&quot;."
+"\"/home/djangoprojects/myproject\"."
 
 #: types.py:149
 msgid "Raise on CommandError exceptions"
@@ -136,49 +136,3 @@ msgstr "Fórsa dathú an aschuir ordaithe."
 #: types.py:204
 msgid "Skip system checks."
 msgstr "Scipeáil ar sheiceálacha córais."
-
-#, python-brace-format
-#~ msgid "Unable to import fallback completion function: {err}"
-#~ msgstr "Níorbh fhéidir feidhm chríochnaithe chúltaca a iompórtáil: {err}"
-
-#~ msgid ""
-#~ "Please specify the shell to install or remove autocompletion for. Unable to "
-#~ "detect shell."
-#~ msgstr ""
-#~ "Sonraigh le do thoil an bhlaosc chun uathchríochnú a shuiteáil nó a bhaint "
-#~ "dó. Ní féidir an bhlaosc a bhrath."
-
-#, python-brace-format
-#~ msgid "Unsupported shell: {shell}"
-#~ msgstr "Blaosc nach dtacaítear leis: {shell}"
-
-#, python-brace-format
-#~ msgid ""
-#~ "Shell {shell} does not support autocompletion for scripts that are not "
-#~ "installed on the path. You must create an entry point for {script_name}. See"
-#~ " {link}."
-#~ msgstr ""
-#~ "Ní thacaíonn Shell {shell} le uathchríochnú do scripteanna nach bhfuil "
-#~ "suiteáilte ar an gcosán. Ní mór duit pointe iontrála a chruthú do "
-#~ "{script_name}. Féach ar {nasc}."
-
-#, python-brace-format
-#~ msgid ""
-#~ "It is not recommended to install tab completion for a script not on the path"
-#~ " because completions will likely only work if the script is invoked from the"
-#~ " same location and using the same relative path. You may wish to create an "
-#~ "entry point for {script_name}. See {link}."
-#~ msgstr ""
-#~ "Ní mholtar críochnú cluaisín a shuiteáil le haghaidh script nach bhfuil ar "
-#~ "an gcosán mar is dócha nach n-oibreoidh críochnuithe ach amháin má tá an "
-#~ "script á agairt ón suíomh céanna agus ag baint úsáide as an gcosán "
-#~ "coibhneasta céanna. Seans gur mhaith leat pointe iontrála a chruthú do "
-#~ "{script_name}. Féach ar {nasc}."
-
-#, python-brace-format
-#~ msgid "Installed autocompletion for {shell} @ {install_path}"
-#~ msgstr "Suiteáil uathchríochnú le haghaidh {shell} @ {install_path}"
-
-#, python-brace-format
-#~ msgid "Uninstalled autocompletion for {shell}."
-#~ msgstr "Uathchríochnú díshuiteáilte le haghaidh {shell}."
