--- a/django_typer/locale/ur/LC_MESSAGES/django.po
+++ b/django_typer/locale/ur/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-04 03:08-0600\n"
+"POT-Creation-Date: 2025-02-04 03:42-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -28,8 +28,7 @@ msgstr "استعمال کرنے کے لیے شیل۔"
 
 #: management/commands/shellcompletion.py:235
 msgid "Filter terminal formatting control sequences out of completion text."
-msgstr ""
-"مکمل ہونے والے متن سے باہر ٹرمینل فارمیٹنگ کنٹرول کے سلسلے کو فلٹر کریں۔"
+msgstr "تکمیلی متن سے باہر ٹرمینل فارمیٹنگ کنٹرول ترتیب کو فلٹر کریں۔"
 
 #: management/commands/shellcompletion.py:248
 msgid "Allow terminal formatting control sequences in completion text."
@@ -53,7 +52,7 @@ msgid ""
 "completion command is not a TyperCommand."
 msgstr ""
 "جب تکمیل کمانڈ TyperCommand نہیں ہے تو استعمال کرنے کے لیے فال بیک مکمل "
-"فنکشن کے لیے python درآمد کا راستہ۔"
+"فنکشن کا python درآمد کا راستہ۔"
 
 #: management/commands/shellcompletion.py:299
 msgid "The name of the template to use for the shell completion script."
@@ -71,15 +70,15 @@ msgstr ""
 "جینگو مینیج اسکرپٹ کا نام شیل کی تکمیل کو ہٹانے کے لیے اگر اس کمانڈ کو "
 "استعمال کرنے کے لیے استعمال ہونے والے اسکرپٹ سے مختلف ہو۔"
 
-#: management/commands/shellcompletion.py:392
+#: management/commands/shellcompletion.py:390
 msgid "Generate autocompletion for command string."
 msgstr "کمانڈ سٹرنگ کے لیے خودکار تکمیل پیدا کریں۔"
 
-#: management/commands/shellcompletion.py:400
+#: management/commands/shellcompletion.py:398
 msgid "The command string to generate completion suggestions for."
-msgstr "کمانڈ سٹرنگ جس کے لیے تکمیل کی تجاویز تیار کی جاتی ہیں۔"
+msgstr "کمانڈ سٹرنگ جس کے لیے تکمیل کی تجاویز تیار کی جائیں گی۔"
 
-#: management/commands/shellcompletion.py:410
+#: management/commands/shellcompletion.py:408
 msgid ""
 "The python import path to a fallback complete function to use when the "
 "completion command is not a TyperCommand. By default, the builtin django "
@@ -107,7 +106,7 @@ msgid ""
 "this isn't provided, the DJANGO_SETTINGS_MODULE environment variable will be"
 " used."
 msgstr ""
-"سیٹنگ ماڈیول کا ازگر کا راستہ، جیسے &quot;myproject.settings.main&quot;۔ اگر"
+"سیٹنگ ماڈیول کا ازگر کا راستہ، جیسے \"myproject.settings.main\"۔ اگر"
 " یہ فراہم نہیں کیا جاتا ہے تو، DJANGO_SETTINGS_MODULE ماحولیاتی متغیر "
 "استعمال کیا جائے گا۔"
 
@@ -117,7 +116,7 @@ msgid ""
 "\"/home/djangoprojects/myproject\"."
 msgstr ""
 "ازگر کے راستے میں شامل کرنے کے لیے ایک ڈائریکٹری، جیسے "
-"&quot;/home/djangoprojects/myproject&quot;۔"
+"\"/home/djangoprojects/myproject\"۔"
 
 #: types.py:149
 msgid "Raise on CommandError exceptions"
@@ -133,50 +132,4 @@ msgstr "کمانڈ آؤٹ پٹ کو زبردستی رنگین کریں۔"
 
 #: types.py:204
 msgid "Skip system checks."
-msgstr "سسٹم کی جانچ کو چھوڑ دیں۔"
-
-#, python-brace-format
-#~ msgid "Unable to import fallback completion function: {err}"
-#~ msgstr "فال بیک تکمیل فنکشن درآمد کرنے سے قاصر: {err}"
-
-#~ msgid ""
-#~ "Please specify the shell to install or remove autocompletion for. Unable to "
-#~ "detect shell."
-#~ msgstr ""
-#~ "براہ کرم خودکار تکمیل کو انسٹال کرنے یا ہٹانے کے لیے شیل کی وضاحت کریں۔ شیل "
-#~ "کا پتہ لگانے سے قاصر۔"
-
-#, python-brace-format
-#~ msgid "Unsupported shell: {shell}"
-#~ msgstr "غیر تعاون یافتہ شیل: {shell}"
-
-#, python-brace-format
-#~ msgid ""
-#~ "Shell {shell} does not support autocompletion for scripts that are not "
-#~ "installed on the path. You must create an entry point for {script_name}. See"
-#~ " {link}."
-#~ msgstr ""
-#~ "شیل {shell} اسکرپٹ کے لیے خودکار تکمیل کو سپورٹ نہیں کرتا جو راستے پر انسٹال"
-#~ " نہیں ہیں۔ آپ کو {script_name} کے لیے ایک انٹری پوائنٹ بنانا چاہیے۔ دیکھیں "
-#~ "{link}۔"
-
-#, python-brace-format
-#~ msgid ""
-#~ "It is not recommended to install tab completion for a script not on the path"
-#~ " because completions will likely only work if the script is invoked from the"
-#~ " same location and using the same relative path. You may wish to create an "
-#~ "entry point for {script_name}. See {link}."
-#~ msgstr ""
-#~ "کسی اسکرپٹ کے لیے ٹیب تکمیل کو انسٹال کرنے کی سفارش نہیں کی جاتی ہے جو کہ "
-#~ "راستے پر نہیں ہے کیونکہ مکمل ہونے کا امکان صرف اس صورت میں کام کرے گا جب "
-#~ "اسکرپٹ کو ایک ہی جگہ سے طلب کیا گیا ہو اور ایک ہی رشتہ دار راستہ استعمال کیا"
-#~ " جائے۔ آپ {script_name} کے لیے ایک انٹری پوائنٹ بنانا چاہیں گے۔ دیکھیں "
-#~ "{link}۔"
-
-#, python-brace-format
-#~ msgid "Installed autocompletion for {shell} @ {install_path}"
-#~ msgstr "{shell} @ {install_path} کے لیے خودکار تکمیل کو انسٹال کیا گیا"
-
-#, python-brace-format
-#~ msgid "Uninstalled autocompletion for {shell}."
-#~ msgstr "{shell} کے لیے خودکار تکمیل کو اَن انسٹال کیا گیا۔"
+msgstr "سسٹم چیکس کو چھوڑ دیں۔"
